--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,15 @@
 .App-header {
   background-color: #282c34;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
   padding: 1rem;
+}
+
+.App-header a {
+  color: white;
 }
 
 .App-title {
