--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,26 +4,26 @@
 
 .App-header {
   background-color: #4f2119;
-  box-shadow: 0 2px 2px black;
+  box-shadow: 0 1px 4px hsla(9, 52%, 10%, 1);
+  color: #f9fafa;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: calc(10px + 2vmin);
-  color: white;
   padding: 1rem;
 }
 
 .App-header a {
-  color: white;
+  color: #f9fafa;
 }
 
-.App-title {
+.App-title, a.App-title {
   color: #e18258;
   font-family: 'Luckiest Guy', cursive;
   font-size: 1.5em;
   line-height: 1em;
   text-decoration: none;
-  text-shadow: 0 -2px 2px #000000;
+  text-shadow: 0 -1px 4px hsla(9, 52%, 10%, 1);
   /* text-shadow:
    -2px -2px 0 hsl(6, 66%, 27%),  
     2px -2px 0 hsl(6, 66%, 27%),
@@ -37,8 +37,29 @@
   }
 }
 
+.App-nav small {
+  color: #e18258;
+  display: block;
+  text-align: center;
+  width: auto;
+}
+
+.App-nav__button {
+  background-color: #4f2119;
+  color: #f9fafa;
+  border: 4px solid #e18258;
+  padding: 0 4px;
+}
+
+.App-nav__button--line {
+  width: 24px;
+  height: 4px;
+  background-color: #e18258;
+  margin: 6px auto;
+}
+
 .App-nav__list {
-  display: flex;
+  display: none;
   list-style: none;
 }
 
