--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,9 @@
 /* Google Fonts */
-@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy|Raleway');
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy|Raleway:400,700,900');
 
 body {
   background: #f9fafa;
+  color: #4f2119;
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
@@ -15,5 +16,10 @@ code {
 
 h1, h2 {
   color: #4f2119;
-  font-family: 'Luckiest Guy', cursive;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+}
+
+h1 strong, h2 strong {
+  font-weight: 900;
 }
