--- a/src/styles/games-search-form.css
+++ b/src/styles/games-search-form.css
@@ -1,9 +1,17 @@
+.games__search {
+  text-align: center;
+}
+
 .games__search-fields {
   border: 0;
-  display: flex;
   padding: 0;
 }
 
-.games__search-fields .form-input {
-  margin-right: 1em;
+@media only screen and (min-width: 768px) {
+  .games__search-fields {
+    display: flex;
+  }
+  .games__search-fields .form-input {
+    margin-right: 1em;
+  }
 }
