--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -5,7 +5,7 @@
   cursor: pointer;
   font-size: 1em;
   font-weight: 700;
-  margin: 1em;
+  margin: 1em 0;
   padding: 1em 2em;
   text-align: center;
   text-decoration: none;
