--- a/src/styles/game-form.css
+++ b/src/styles/game-form.css
@@ -1,3 +1,9 @@
 .form-actions {
   text-align: center;
 }
+
+@media only screen and (min-width: 768px) {
+  .form-actions {
+    text-align: left;
+  }
+}
