--- a/src/styles/games.css
+++ b/src/styles/games.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.games h2 {
+  text-align: center;
+}
+
 .games__list {
   list-style: none;
   margin: 0;
@@ -49,4 +53,34 @@
 .game__buttons {
   display: flex;
   justify-content: space-between;
+}
+
+@media only screen and (min-width: 768px) {
+  .games__list {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+  }
+
+  .game {
+    flex: 0 1 45%;
+  }
+}
+
+@media only screen  and (min-width : 1224px) {
+  .games-header {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .games-header > * {
+    margin: 0 1em;
+  }
+
+  .game {
+    flex: 0 1 30%;
+    margin: 1em;
+    max-width: 25em;
+  }
 }
