--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,3 +28,9 @@ h1, h2 {
 h1 strong, h2 strong {
   font-weight: 900;
 }
+
+@media only screen and (min-width: 768px) {
+  h1, h2 {
+    text-align: inherit;
+  }
+}
