--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -33,6 +33,10 @@ Note: Beware of modifying this element as it can break the animations - you shou
   font-size: 1.15em;
 }
 
+.bm-menu a {
+  color: #4f2119;
+}
+
 /* Morph shape necessary with bubble or elastic */
 .bm-morph-shape {
   fill: #373a47;
