--- a/src/styles/games-search-form.css
+++ b/src/styles/games-search-form.css
@@ -19,10 +19,7 @@
 
 @media only screen  and (min-width : 1224px) {
   .games__search-fields {
-    display: grid;
-    grid-template-areas:
-      "title title"
-      "input tags";
+    display: block;
   }
 
   .games__search-fields .form-input {
