--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,6 +1,7 @@
 .btn {
   background-color: #4f2119;
-  border: none;
+  border: 2px solid #4f2119;
+  box-sizing: border-box;
   color: #f9fafa;
   cursor: pointer;
   font-size: 1em;
@@ -12,8 +13,9 @@
   transition-duration: 0.4s;
 }
 
-.btn:hover {
+.btn:active, .btn:focus, .btn:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  outline: 0;
 }
 
 .btn.disabled {
@@ -26,4 +28,9 @@
 
 .btn.btn-primary {
   background-color: #CB3A2A;
+}
+
+.btn.btn-secondary {
+  background-color: #DBB3C6;
+  color: #4f2119;
 }
