--- a/src/styles/games.css
+++ b/src/styles/games.css
@@ -76,6 +76,7 @@
 @media only screen  and (min-width : 1224px) {
   .games__wrapper {
     display:grid;
+    grid-template-columns: 1fr auto;
     grid-template-areas: "games search-form";
   }
   .games-header {
