--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -45,8 +45,6 @@
   position: absolute;
   z-index: 2;
   border: 1px solid #4f2119;
-  border-top: 1px solid #eee;
-  border-radius: 0 0 2px 2px;
   top: 44px;
   width: 100%;
   height: 0;
@@ -126,12 +124,8 @@
   background: #e1f5fe;
 }
 
-.rrs__option.rrs__option--next-selection {
-  background: #cb3a2a;
-  color: #f9fafa;
-}
-
 .rrs__option.rrs__option--selected {
+  background: #cb3a2a;
   color: #f9fafa;
 }
 
@@ -174,7 +168,7 @@
 }
 
 .rrs--has-changed .rrs__label {
-  color: #0273b5;
+  color: #4f2119;
 }
 
 /*
@@ -219,24 +213,23 @@
   width: 16px;
   height: 16px;
   top: -1px;
-  border: 1px solid #ccc;
+  border: 1px solid #4f2119;
   margin: 2px 8px 2px 0;
-  border-radius: 4px;
 }
 
 .rrs__option.rrs__option--selected .checkbox {
-  border: 1px solid #0273b5;
+  border: 1px solid #f9fafa;
 }
 
 .rrs .checkbox-icon {
-  fill: #fff;
+  fill: #f9fafa;
   position: absolute;
   left: 2px;
   top: 2px;
 }
 
 .rrs__option.rrs__option--selected .checkbox-icon {
-  fill: #0273b5;
+  fill: #f9fafa;
 }
 
 
