--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@
   justify-content: space-between;
   font-size: calc(10px + 2vmin);
   padding: 1rem;
+  position: relative;
+  z-index: 100;
 }
 
 .App-header a {
