--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,8 @@
   font-family: 'Luckiest Guy', cursive;
   font-size: 1.5em;
   line-height: 1em;
+  max-width: 70vw;
+  padding: 0.4em 0;
   text-decoration: none;
   text-shadow: 0 -1px 4px hsla(9, 52%, 10%, 1);
   /* text-shadow:
