--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,10 @@ h1 strong, h2 strong {
   font-weight: 900;
 }
 
+img {
+  max-width: 100%;
+}
+
 @media only screen and (min-width: 768px) {
   h1, h2 {
     text-align: inherit;
