--- a/src/components/games/games.css
+++ b/src/components/games/games.css
@@ -17,11 +17,12 @@
 }
 
 .game {
-  background-color: hsla(18, 70%, 75%, 1);
-  border: 2px solid #4f2119;
+  background-color: #4f2119;
+  border: 2px solid #19000b;
   box-shadow: 0 1px 4px hsla(9, 52%, 10%, 0.75);
+  color: #f9fafa;
   margin: 1em 0;
-  padding: 1em;
+  padding: 1em 1em 0;
   transition: 0.4s;
 }
 
@@ -29,10 +30,18 @@
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
-.game__title {
-  font-size: 1.5em;
+.game strong {
   font-variant: small-caps;
-  margin: 0 0 0.5em;
+  font-weight: 400;
+}
+
+.game__title {
+  border-bottom: 2px solid #f9fafa;
+  font-size: 2em;
+  font-variant: small-caps;
+  font-weight: 400;
+  margin: 0 0 0.25em;
+  padding-bottom: 0.25em;
   text-align: center;
 }
 
@@ -53,8 +62,8 @@
 }
 
 .game__tag-list li {
-  background-color: #e18258;
-  border: 1px solid #4f2119;
+  border: 1px solid #d19cb8;
+  color: #d19cb8;
   display: inline-block;
   margin: 0.25em;
   padding: 0.5em;
@@ -63,6 +72,7 @@
 .game__buttons {
   display: flex;
   justify-content: space-between;
+  margin-top: 1rem;
 }
 
 @media only screen and (min-width: 768px) {
