--- a/src/components/header-bar/menu-button.css
+++ b/src/components/header-bar/menu-button.css
@@ -1,5 +1,5 @@
 .menu-button {
-  color: #e18258;
+  color: #d19cb8;
   text-align: center;
 }
 
@@ -7,14 +7,14 @@
   display: inline-block;
   background-color: #4f2119;
   color: #f9fafa;
-  border: 4px solid #e18258;
+  border: 4px solid #d19cb8;
   padding: 0 4px;
 }
 
 .menu-button__line {
   width: 24px;
   height: 4px;
-  background-color: #e18258;
+  background-color: #d19cb8;
   margin: 6px auto;
   transition: 0.4s;
 }
