--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -1,5 +1,5 @@
 .landing-page {
-  align-content: center;
+  align-content: end;
   background: #e18258;
   background-image: url(./landing-page-background.jpg);
   background-size: cover;
@@ -11,7 +11,6 @@
   justify-content: center;
   left: 0;
   top: 0;
-  padding: 2em;
   position: absolute;
   margin: 0 auto;
   text-align: center;
@@ -24,28 +23,29 @@
 }
 
 .landing-page__copy {
-  background-color: #e18258;
-  padding: 2em;
+  background-color: #d19cb8;
+  box-shadow: 0 1px 4px hsla(9, 52%, 10%, 0.75);
+  padding: 1em;
   width: 100vw;
 }
 
 @media only screen and (min-width: 768px) {
   .landing-page {
+    align-content: center;
     grid-gap: 1em;
   }
   
   .landing-page > * {
-    max-width: 50vw;
+    max-width: 60vw;
   }
-  
+
   .landing-page__copy {
-    border: 4px solid #4f2119;
+    padding: 2em;
   }
 }
 
 @media only screen  and (min-width : 1224px) {
   .landing-page {
-    align-content: center;
     align-items: center;
     justify-content: space-evenly;
     grid-template-areas: 'copy actions';
@@ -64,5 +64,9 @@
   .landing-page__actions > * {
     display: inline-block;
     margin: 1em;
+  }
+
+  .landing-page__copy {
+    padding: 4em;
   }
 }
