--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 body {
   background: #f9fafa;
-  color: #4f2119;
+  color: #19000b;
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
@@ -19,7 +19,6 @@ code {
 }
 
 h1, h2 {
-  color: #4f2119;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   text-align: center;
@@ -29,12 +28,24 @@ h1 strong, h2 strong {
   font-weight: 900;
 }
 
+h1 {
+  text-transform: uppercase;
+}
+
 img {
   max-width: 100%;
 }
 
 @media only screen and (min-width: 768px) {
-  h1, h2 {
+  h2 {
+    text-align: inherit;
+  }
+}
+
+@media only screen  and (min-width : 1224px) {
+  h1 {
+    border-bottom: 2px solid #19000b;
+    padding-bottom: 0.25em;
     text-align: inherit;
   }
 }
