Add  and  elements to forms

--- a/src/components/games/games-search-form.css
+++ b/src/components/games/games-search-form.css
@@ -2,9 +2,8 @@
   text-align: center;
 }
 
-.games__search-fields {
-  border: 0;
-  padding: 0;
+.games__search-fields legend {
+  text-transform: uppercase;
 }
 
 .games__search-buttons > * {
