--- a/src/components/game-form.css
+++ b/src/components/game-form.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.game-form legend {
+  text-transform: uppercase;
+}
+
 @media only screen and (min-width: 768px) {
   .game-form {
     text-align: left;
