Add functionality to admin toggle switch

--- a/src/components/toggle-switch.css
+++ b/src/components/toggle-switch.css
@@ -15,7 +15,7 @@
 }
 
 .switch-toggle {
-  background: #fff;
+  background: #f9fafa;
   border-radius: 1rem;
   height: 1.75rem;
   position: absolute;
