--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,13 +1,13 @@
 .btn {
   background-color: #4f2119;
-  border: 2px solid #4f2119;
+  border: 1px solid #4f2119;
   box-sizing: border-box;
   color: #f9fafa;
   cursor: pointer;
   font-size: 1em;
   font-weight: 700;
   margin: 1em 0;
-  padding: 1em 2em;
+  padding: 1rem 2rem;
   text-align: center;
   text-decoration: none;
   transition-duration: 0.4s;
@@ -16,6 +16,10 @@
 .btn:active, .btn:focus, .btn:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   outline: 0;
+}
+
+.btn span {
+  display: inline-block;
 }
 
 .btn-disabled {
@@ -30,6 +34,11 @@
   visibility: hidden;
 }
 
+.btn-icon {
+  display: flex;
+  justify-content: flex-start;
+}
+
 .btn-primary {
   background-color: #CB3A2A;
 }
@@ -39,15 +48,31 @@
   color: #19000b;
 }
 
+.btn__icon {
+  order: 1;
+  padding-right: 2rem;
+}
+
+.btn__label {
+  order: 2;
+}
+
 .btn-game {
   background: transparent;
   border-color: #e18258;
   color: #e18258;
 }
 
-.btn-game.btn-primary {
-  border-color: #e38278;
-  color: #e38278;
+.btn-game.btn--add {
+  background-color: hsla(137, 24%, 28%, 1);
+  border-color: #f9fafa;
+  color: #f9fafa;
+}
+
+.btn-game.btn--remove {
+  background-color: hsla(6, 66%, 34%, 1);
+  border-color: #f9fafa;
+  color: #f9fafa;
 }
 
 /* Button groups */
