Add edit link to admin/games

--- a/src/components/table.css
+++ b/src/components/table.css
@@ -4,6 +4,10 @@
   text-align: left;
 }
 
+.table a {
+  color: #19000b;
+}
+
 .table td, .table th {
   padding: 0.5em;
   border-left: 1px solid #19000b;
