--- a/src/components/games/games.css
+++ b/src/components/games/games.css
@@ -26,7 +26,8 @@
   border: 2px solid #19000b;
   box-shadow: 0 1px 4px hsla(9, 52%, 10%, 0.75);
   color: #f9fafa;
-  padding: 1em 1em 0;
+  padding: 1em;
+  text-align: center;
   transition: 0.4s;
 }
 
@@ -44,7 +45,6 @@
   font-variant: small-caps;
   font-weight: 400;
   margin: 0;
-  text-align: center;
 }
 
 .game__title-link {
